# authent8

./: .a8ignore  .authent8_fp.json  .benchmark_history.json  .env.example  .gitignore  ACCURACY_GUIDE.md  AI_IMPACT_STATEMENT.md  BENCHMARK_REPORT.md  DEMO_SCRIPT.md  INSTALL.md  README.md  REAL_BENCHMARKS.md  authent8_report12.json  benchmark.py  benchmark_2024.py  benchmark_professional.py  benchmark_results.json  benchmark_results_2024.json  debug_ai.py  debug_ai2.py  file1  final_ai_test.json  install.ps1  install.sh  pyproject.toml  requirements.txt  scan_output.txt  security_check.py  test_ai_debug.py  test_ai_in_cli.py  test_gitleaks.py  test_scanner_debug.py  vercel.json
.github/workflows/: cross-platform-validation.yml
benchmark_datasets/: ground_truth.json
benchmark_datasets/owasp_test_cases/A01_Broken_Access_Control/: test_cwe_22_1.py  test_cwe_639_2.py
benchmark_datasets/owasp_test_cases/A02_Cryptographic_Failures/: test_cwe_327_1.py  test_cwe_327_2.py  test_cwe_798_3.py
benchmark_datasets/owasp_test_cases/A03_Injection/: test_cwe_78_2.py  test_cwe_79_4.py  test_cwe_89_1.py  test_cwe_95_3.py
benchmark_datasets/owasp_test_cases/A04_Insecure_Design/: test_cwe_502_1.py
benchmark_datasets/owasp_test_cases/A05_Security_Misconfiguration/: test_cwe_489_1.py  test_cwe_611_2.py
benchmark_datasets/owasp_test_cases/A07_Auth_Failures/: test_cwe_521_1.py
benchmark_datasets/owasp_test_cases/A08_Data_Integrity/: test_cwe_330_1.py
benchmark_datasets/owasp_test_cases/A10_SSRF/: test_cwe_918_1.py
benchmark_datasets/security_2024/cwe_top_25_2024/: cwe_190.py  cwe_200.py  cwe_22.py  cwe_269.py  cwe_276.py  cwe_287.py  cwe_306.py  cwe_352.py  cwe_400.py  cwe_427.py  cwe_434.py  cwe_476.py  cwe_502.py  cwe_611.py  cwe_77.py  cwe_78.py  cwe_79.py  cwe_798.py  cwe_862.py  cwe_863.py  cwe_89.py  cwe_918.py  cwe_94.py
benchmark_datasets/security_2024/emerging_2024/: ai_001.py  ai_002.py  api_001.py  api_002.py  api_003.py  cloud_001.py  cloud_002.py  sec_001.py  sec_002.py  supply_001.py  web_001.py  web_002.py  web_003.py
cli/: authent8_cli.py  authent8_cli_enhanced.py
config/: .trivy.yaml  custom_rules.yml
core/: __init__.py  ai_validator.py  bandit_scanner.py  gitleaks_scanner.py  scanner_orchestrator.py  semgrep_scanner.py  trivy_scanner.py
demo/vulnerable-app/: app.py  requirements.txt
landing/: index.html
src/authent8/: __init__.py  config.py  install_tools.py
src/authent8/cli/: __init__.py  main.py
src/authent8/config/: .semgrep.yml  .trivy.yaml  __init__.py  custom_rules.yml  gitleaks.toml
src/authent8/core/: __init__.py  ai_validator.py  bandit_scanner.py  checkov_scanner.py  connectivity.py  detect_secrets_scanner.py  false_positives.py  gitleaks_scanner.py  grype_scanner.py  ignore_utils.py  osv_scanner.py  scanner_orchestrator.py  semgrep_scanner.py  trivy_scanner.py
tests/: smoke_parsers.py  test_ai_validator_heuristics.py  test_ignore_utils.py
